# Divine-OS-Lite

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  STANDARDS.md  USAGE.md  VERIFICATION.md  WORKSPACE_ORGANIZATION.md  cli.py  kiro_memory_init.py  kiro_memory_save.py  pyproject.toml  setup.cfg  test_chat.md  test_hostile_user.py  test_memory.py  test_powershell_validator.py
.github/workflows/: coverage.yml  lint.yml  tests.yml
.kiro/steering/: file-organization.md
checkpoints/: rag_test.json  semantic_checkpoint_kiro_20260314_005210.json  semantic_checkpoint_kiro_20260314_005304.json  semantic_checkpoint_kiro_20260314_005355.json  semantic_checkpoint_kiro_20260314_005356.json  semantic_checkpoint_kiro_20260314_005407.json  semantic_checkpoint_kiro_20260314_005807.json  semantic_checkpoint_kiro_20260314_010108.json  semantic_checkpoint_kiro_20260314_011428.json  semantic_checkpoint_kiro_20260314_012718.json  semantic_checkpoint_kiro_20260314_012822.json  semantic_checkpoint_kiro_20260314_012857.json  semantic_checkpoint_kiro_20260314_014035.json  semantic_checkpoint_kiro_20260314_015620.json  semantic_checkpoint_kiro_20260314_020723.json  semantic_checkpoint_kiro_20260314_020724.json  semantic_checkpoint_pipeline_1.json  semantic_checkpoint_pipeline_2.json  semantic_checkpoint_pipeline_3.json  semantic_checkpoint_pipeline_4.json  semantic_checkpoint_pipeline_5.json  semantic_checkpoint_test.json  test
config/: pyproject.toml
docs/: CONTRIBUTING.md
prototype/: ledger_client.py  main.py
prototype/data/: event_ledger.db
prototype/utils/: logger.py
src/: __init__.py
src/divineos/: __init__.py  agent.py  agent_orchestrator.py  cli.py  command_validator.py  consciousness_pipeline.py  enforce_quality.py  error_handler.py  evals.py  guardrails.py  kiro_bootstrap.py  lepos.py  markdown_parser.py  memory.py  memory_integration.py  memory_manager.py  memory_orchestrator.py  observability.py  planner.py  rag.py  response_handler.py  semantic_emotions.py  semantic_memory.py  summarizer.py  token_counter.py  validate_powershell.py  values_compass.py  void.py
src/tools/: inspect_db.py  query_db.py
test_checkpoints/: pipeline_1  pipeline_2  pipeline_3  pipeline_4  pipeline_5  rag_pipeline_1.json  rag_pipeline_2.json  rag_pipeline_3.json  rag_pipeline_4.json  rag_pipeline_5.json
tests/: __init__.py  test_agent.py  test_agent_orchestrator.py  test_cli_e2e.py  test_command_validator.py  test_consciousness_pipeline.py  test_emotion_integration.py  test_enforce_quality.py  test_evals.py  test_hostile_user.py  test_kiro_bootstrap.py  test_lepos.py  test_lepos_impact.py  test_memory.py  test_memory_integration.py  test_memory_manager.py  test_memory_orchestrator.py  test_planner.py  test_powershell_validator.py  test_pronoun_enforcer.py  test_rag.py  test_response_handler.py  test_safety_foundation.py  test_semantic_emotions.py  test_semantic_memory.py  test_summarizer.py  test_token_counter.py  test_values_compass.py
