# This file is a wrapper that imports from config/pyproject.toml
# See config/pyproject.toml for the actual configuration

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divineos-lite"
version = "0.1.0"
description = "DivineOS Lite - Phase 1: Data Fidelity. Trustworthy message storage with integrity verification."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Divine OS Team"}
]
keywords = ["database", "integrity", "verification", "chat", "storage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.0.0",
    "pylint>=2.0.0",
]

[project.scripts]
divineos-lite = "src.divineos.cli:cli"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
py_version = 312
skip_gitignore = true
known_first_party = ["src.divineos"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
exclude = [".mypy_cache", ".pytest_cache", "build", "dist"]
ignore_missing_imports = false

[tool.pylint.messages_control]
disable = [
    "C0111",
    "C0103",
    "R0913",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-attributes = 7

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
